<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="48.0dip" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16.0dp" >

            <TextView
                android:id="@+id/label_latlng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8.0dp"
                android:layout_marginLeft="8.0dp"
                android:text="@string/title_section1"
                android:textAllCaps="true"
                android:textColor="@color/dark_red"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/horizontal_line"
                android:layout_width="match_parent"
                android:layout_height="2.0dip"
                android:layout_gravity="center_horizontal"
                android:background="@color/dark_red" />

            <LinearLayout
                android:id="@+id/copylayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sms_selector"
                android:baselineAligned="false"
                android:clickable="true"
                android:focusable="true"
                android:minHeight="56.0dip"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.0"
                    android:orientation="vertical"
                    android:padding="8.0dip" >

                    <TextView
                        android:id="@+id/latlng"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/location_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/latlng"
                        android:textAllCaps="true"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textColor="@color/light_gray" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >

                    <View
                        android:id="@+id/vertical_divider"
                        android:layout_width="1.0dip"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="12.0dp"
                        android:layout_marginTop="12.0dp"
                        android:background="?android:dividerVertical" />

                    <ImageView
                        android:id="@+id/btn_send_sms"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/sms_selector"
                        android:clickable="true"
                        android:contentDescription="@string/send_sms"
                        android:duplicateParentState="false"
                        android:padding="8.0dip"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_text_holo_light" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@+id/horizontal_divider"
                android:layout_width="match_parent"
                android:layout_height="1.0dip"
                android:layout_gravity="center_horizontal"
                android:background="?android:dividerHorizontal" />

            <LinearLayout
                android:id="@+id/showHospitals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sms_selector"
                android:baselineAligned="false"
                android:clickable="true"
                android:focusable="true"
                android:minHeight="56.0dip"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.0"
                    android:orientation="vertical"
                    android:padding="8.0dip" >

                    <TextView
                        android:id="@+id/address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4.0dip"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/location_type2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address"
                        android:textAllCaps="true"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textColor="@color/light_gray" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >

                    <View
                        android:id="@+id/vertical_divider2"
                        android:layout_width="1.0dip"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="12.0dp"
                        android:layout_marginTop="12.0dp"
                        android:background="?android:dividerVertical" />

                    <ImageView
                        android:id="@+id/btn_show_map"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/sms_selector"
                        android:contentDescription="@string/show_map"
                        android:duplicateParentState="false"
                        android:padding="8.0dip"
                        android:scaleType="centerInside"
                        android:src="@drawable/location_map" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/label_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8.0dp"
                android:layout_marginLeft="8.0dp"
                android:text="@string/details"
                android:textAllCaps="true"
                android:textColor="@color/dark_red"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/horizontal_line2"
                android:layout_width="match_parent"
                android:layout_height="2.0dip"
                android:layout_gravity="center_horizontal"
                android:background="@color/dark_red" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:minHeight="56.0dip"
                android:orientation="vertical"
                android:padding="8.0dip" >

                <TextView
                    android:id="@+id/timestamp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/black"
                    android:textIsSelectable="true" />

                <TextView
                    android:id="@+id/label_timestamp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timestamp"
                    android:textAllCaps="true"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/light_gray" />
            </LinearLayout>

            <View
                android:id="@+id/horizontal_divider2"
                android:layout_width="match_parent"
                android:layout_height="1.0dip"
                android:layout_gravity="center_horizontal"
                android:background="?android:dividerHorizontal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:minHeight="56.0dip"
                android:orientation="vertical"
                android:paddingLeft="8.0dip"
                android:paddingRight="8.0dip"
                android:paddingTop="8.0dip" >

                <TextView
                    android:id="@+id/accuracy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/black"
                    android:textIsSelectable="true" />

                <TextView
                    android:id="@+id/label_accuracy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accuracy"
                    android:textAllCaps="true"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/light_gray" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_call"
        android:layout_width="match_parent"
        android:layout_height="48.0dip"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_call_custom_style_2"
        android:gravity="center"
        android:text="@string/call"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

</RelativeLayout>